# OhKamel

./: README.md
.github/workflows/: deploy-pages.yml
ocaml_inception/: dune-project  ocaml_inception.opam
ocaml_inception/lib/: interpreter.ml
web/: eslint.config.js  index.html  package-lock.json  package.json
web/public/ocaml/: main.bc.js
web/scripts/: sync-ocaml-js.mjs
web/src/: App.css  App.tsx  Showcase.tsx  forms.ts  index.css  vite-env.d.ts
